Version 2.0.0-2
-----------------------------------------------------------------------------
General:
* `sjt.lmer` and `sjt.glmer` now warn when `show.aic = TRUE` and models were fitted with REML instead of ML.

Changes to functions:
* `sjt.frq`, `sjt.xtab` and `view_df` now show notes (`note`-attribute, see `sjmisc::set_note`) of labelled data as tooltip, when mouse hovers the variable name/label, in the HTML-output.
* `axis.title` argument for `sjp.glmer` and `sjp.lmer` can now be a vector of length one or two, to be more flexible with axes titles for the various plot types.

Bug fixes:
* `axis.lim` was not recognized for non-binomial model families and linear models slope- and effect-plot-types.


Version 2.0.0
-----------------------------------------------------------------------------
Major changes:
* This package update includes a major revision of function arguments and their naming, in order to get a consistent argument pattern across all package functions. This means that your existing code, which uses **sjPlot**-package-functions, most likely needs adaptions to work again.
* Arguments were harmonized across all package functions. This includes refactoring of many function argument names, to get consistent argument names in functions (e.g. `sort.coef` now no longer exists, and was renamed to `sort.est`, which was already used by some other functions).
* Camel cased argument names were replaced by lowercase dot-separated names (e.g. `showCI` was renamed to `show.ci`) and harmonized bewteen different functions 
* `type` arguments of `sjp.lm`, `sjp.glm`, `sjp.lmer` and `sjp.glmer` were harmonized, so that one type does the same in all functions. `"pred"` and `"fe.pred"` were renamed to `"slope"` and `"fe.slope"`, `"fe.ri"` and `"ri.pc"` were renamed to `"ri.slope"`, `"resp"` and `"y.pc"` were renamed to `"pred"` and `"pred.fe"`.